复习了Java文本、Spring等知识，修改了图片路径

--- a/_posts/2020-10-07-Mybatis.md
+++ b/_posts/2020-10-07-Mybatis.md
@@ -21,13 +21,13 @@ tags: ORM
 
   JDBC是Java DataBase Connectivity的缩写，它是一种可用于执行SQL语句的Java API，其中包含跨平台的数据库访问方法,为数据库应用开发人员提供了一种标准的应用程序编程接口,屏蔽了具体数据库的差异,如图1-1所示。当Java程序访问数据库时,由 JDBC API接口调用相应数据库的API实现来访问数据库,从而无须改变Java程序就能访问不同的数据库。
 
-<img src="/../assets/Mybatis/1240-20210628172742244.jpeg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172742244.jpeg" alt="img" style="zoom:50%;" />
 
 ###  JDBC实现
 
   不同的数据库提供不同的JDBC实现,如图1-2所示,JDBC的实现包括三部分。
 
-<img src="/../assets/Mybatis/1240-20210628172742019.jpeg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172742019.jpeg" alt="img" style="zoom:50%;" />
 
 - JDBC驱动管理器:对应 java. sql DriverManager类,它负责注册特定JBC驱动器,以及根据驱动器建立与数据库的连接
 
@@ -286,7 +286,7 @@ tags: ORM
    }
  }
 ```
-![img](/../assets/Mybatis/1240-20210628172742146.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172742146.png)
 
 - 构建者模式：创建SqlSessionFactory对象
 - 工厂模式： 创建SqlSession对象
@@ -294,13 +294,13 @@ tags: ORM
 
 #### 源码分析
 
-![img](/../assets/Mybatis/1240-20210628172742182.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172742182.png)
 
   在通过代理模式生成代理对象后，调用方法如listAllUsers()的过程如下：
 （1）通过dom4j解析xml文件。根据mysql数据库的配置信息创建出Connection对象，注册驱动，建立连接。
 （2）获取预处理对象PreparedStatement。将UserMapper.xml文件中对应方法的sql语句传入,调用connection.prepareStatement(sql)获得PreparedStatement对象。
 （3）执行查询。ResultSet resultSet = prepareStatement.executeQuery()
-（4）遍历结果集，封装为List<User>返回。
+（4）遍历结果集，封装为`List<User>`返回。
 
 · 注意事项
   在代理对象调用方法时，mybatis会将方法需要的sql语句和封装结果的实体类全限定类名（即一个标签`<select>`）进行组合，定义成一个MappedStatement对象。
@@ -351,7 +351,7 @@ SELECT U.*, a.id AS aid, a.uid, a.money from account a, user u WHERE a.uid = u.i
 ```
 （2）定义Bean，包含对相关实体类的引用（组合）。
 
-（3）定义ResultMap。注意使用<association></association>对其中包含的实体类进行定义，该标签 用于一对一映射，其中的 property 属性表示要关联的属性，javaType 表示待关联的实体类的全限定类名。
+（3）定义ResultMap。注意使用`<association></association>`对其中包含的实体类进行定义，该标签 用于一对一映射，其中的 property 属性表示要关联的属性，javaType 表示待关联的实体类的全限定类名。
 
 #### 多对多
 
@@ -359,9 +359,9 @@ SELECT U.*, a.id AS aid, a.uid, a.money from account a, user u WHERE a.uid = u.i
 ```sql
 SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN user_role ur ON u.id = ur.uid LEFT OUTER JOIN role r ON ur.rid = r.id;
 ```
-（2）定义Bean，包含相关实体类的集合引用，如List<User>等。
+（2）定义Bean，包含相关实体类的集合引用，如`List<User>`等。
 
-（3）定义ResultMap，注意使用<collection></collection>对其中包含的实体类进行定义，该标签 用于一对一映射，其中的 property 属性表示要关联的属性，ofType 表示待关联的实体类的全限定类名。
+（3）定义ResultMap，注意使用`<collection></collection>`对其中包含的实体类进行定义，该标签 用于一对一映射，其中的 property 属性表示要关联的属性，ofType 表示待关联的实体类的全限定类名。
 
 ### Mybatis拦截器
 
@@ -371,7 +371,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 
 [【myBatis】Mybatis中的拦截器_程序员面试经验分享-CSDN博客_mybatis拦截器](https://blog.csdn.net/moshenglv/article/details/52699976)
 
-<img src="/../assets/Mybatis/1240-20210628172741952.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172741952.png" alt="img" style="zoom:50%;" />
 
 [MyBatis学习——第四篇（拦截器和拦截器分页实现）_huyiju的博客-CSDN博客_分页拦截器](https://blog.csdn.net/huyiju/article/details/82454735?ops_request_misc=%7B%22request%5Fid%22%3A%22161002000316780299086819%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fblog.%22%7D&request_id=161002000316780299086819&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~blog~first_rank_v2~rank_v29-1-82454735.pc_v2_rank_blog_default&utm_term=Mybatis&spm=1018.2226.3001.4450)
 
@@ -399,7 +399,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 - 注意事项
     在编写 Mybatis 的配置文件时，文档结构一定**不可以随便写**，一定要按照官方文档所要求的顺序，比如说：`<settings></settings>` 标签不可以写在` <environments></environments>`下方。具体文档结构见下图：
 
-![img](/../assets/Mybatis/1240-20210628172741920.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172741920.png)
 
 #### 立即加载
 
@@ -413,7 +413,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 
   一级缓存是 **SqlSession** 级别的缓存，只要 SqlSession 没有 **flush** 或 **close**，它就会存在。当调用 SqlSession 的**修改、添加、删除、commit()、close()、clearCache()**等方法时，就会清空一级缓存。
 
-![img](/../assets/Mybatis/1240-20210628172741958.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172741958.png)
 
 - 第一次发起查询用户 id 为 1 的用户信息，Mybatis 会先去找缓存中是否有 id 为 1 的用户信息，如果没有，从数据库查询用户信息。
 
@@ -431,7 +431,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 
   二级缓存是 **Mapper** 映射级别的缓存，多个 SqlSession 去操作同一个 Mapper 映射的 SQL 语句，多个SqlSession 可以共用二级缓存，**二级缓存是跨 SqlSession 的**。
 
-![img](/../assets/Mybatis/1240-20210628172742002.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172742002.png)
 
 - 当 sqlSession1 去查询用户信息的时候，Mybatis 会将查询数据存储到二级缓存中。
 
@@ -468,7 +468,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 
   常用注解表：
 
-![img](/../assets/Mybatis/1240-20210628172742004.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172742004.png)
 
 ### 单表CURD
 
@@ -763,7 +763,7 @@ public Pager<User> findByPager(int page,int size){
 ```
 - spring配置中，增加plugin设置
 
-![img](/../assets/Mybatis/1240-20210628172742081.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210628172742081.png)
 
 -  UserMapper.xml
 
@@ -837,7 +837,7 @@ public Pager<User> findByPager(int page,int size){
 
 #### 数据库和实体类映射
 
-· 驼峰命名
+- 驼峰命名
 
 > 数据库表列：user_name
 >
@@ -854,7 +854,7 @@ public Pager<User> findByPager(int page,int size){
 
 `<setting name="mapUnderscoreToCamelCase" value="true" />`
 
-· 使用别名。参考3.1节
+- 使用别名。参考3.1节
 
 #### Parameter array not found. Available parameters are [collection, list]问题
 
@@ -872,7 +872,7 @@ public Pager<User> findByPager(int page,int size){
   1.在方法参数前面加上你遍历的集合的名称，比如你在foreach的collection中写的是noList，那么你就在传入的list参数前面加上一个注解@Param(“noList”)。
   2.将foreach的collection中的值改成list即可。
 
-· 在实际开发中，上述报错，下面代码为一项目中使用的正确代码：
+- 在实际开发中，上述报错，下面代码为一项目中使用的正确代码：
 
 ```java
 @Select({ "<script>", "select * from `product_category` where category_type in ",
