--- a/_posts/2020-10-10-Spring.md
+++ b/_posts/2020-10-10-Spring.md
@@ -221,23 +221,23 @@ dom4j解析Demo
 ```
 ## 相关API
 
-![img]( /../assets/Spring/1240-20210629151319668.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319668.png)
 
 # Spring简介
 
-  spring是一个开源框架，它由Rod Johnson创建。它是为了解决企业应用开发的复杂性而创建的。Spring使用基本的JavaBean来完成以前只可能由EJB完成的事情。然而，Spring的用途不仅限于服务器端的开发。从简单性、可测试性和松耦合的角度而言，任何Java应用都可以从Spring中受益。
-  Spring是一个轻量级的控制反转(IoC)和面向切面(AOP)的容器框架。
-  轻量，从大小与开销两方面而言Spring都是轻量的。完整的Spring框架可以在一个大小只有1MB多的JAR文件里发布。并且Spring所需的处理开销也是微不足道的。此外，Spring是非侵入式的：典型地，Spring应用中的对象不依赖于Spring的特定类。
-  控制反转，Spring通过一种称作控制反转（IoC）的技术促进了松耦合。当应用了IoC，一个对象依赖的其它对象会通过被动的方式传递进来，而不是这个对象自己创建或者查找依赖对象。你可以认为IoC与JNDI相反——不是对象从容器中查找依赖，而是容器在对象初始化时不等对象请求就主动将依赖传递给它。
-  面向切面，Spring提供了面向切面编程的丰富支持，允许通过分离应用的业务逻辑与系统级服务（例如审计（auditing）和事务（transaction）管理）进行内聚性的开发。应用对象只实现它们应该做的——完成业务逻辑——仅此而已。它们并不负责（甚至是意识）其它的系统级关注点，例如日志或事务支持。
-  容器，Spring包含并管理应用对象的配置和生命周期，在这个意义上它是一种容器，你可以配置你的每个bean如何被创建——基于一个可配置原型（prototype），你的bean可以创建一个单独的实例或者每次需要时都生成一个新的实例——以及它们是如何相互关联的。然而，Spring不应该被混同于传统的重量级的EJB容器，它们经常是庞大与笨重的，难以使用。
-  框架，Spring可以将简单的组件配置、组合成为复杂的应用。在Spring中，应用对象被声明式地组合，典型地是在一个XML文件里。Spring也提供了很多基础功能（事务管理、持久化框架集成等等），将应用逻辑的开发留给了你。
-  所有Spring的这些特征使你能够编写更干净、更可管理、并且更易于测试的代码。它们也为Spring中的各种模块提供了基础支持。
-  一般说的spring框架大都是Spring Framework，它是很多模块的集合，使用这些模块可以很方便地协助我们进行开发。这些模块包括核心容器、数据访问/集成、Web、AOP面向切面编程、工具、消息和测试模块。
+​	spring是一个开源框架，它由Rod Johnson创建。它是为了解决企业应用开发的复杂性而创建的。Spring使用基本的JavaBean来完成以前只可能由EJB完成的事情。然而，Spring的用途不仅限于服务器端的开发。从简单性、可测试性和松耦合的角度而言，任何Java应用都可以从Spring中受益。
+​	Spring是一个轻量级的控制反转(IoC)和面向切面(AOP)的容器框架。
+ 	轻量，从大小与开销两方面而言Spring都是轻量的。完整的Spring框架可以在一个大小只有1MB多的JAR文件里发布。并且Spring所需的处理开销也是微不足道的。此外，Spring是非侵入式的：典型地，Spring应用中的对象不依赖于Spring的特定类。
+​	控制反转，Spring通过一种称作控制反转（IoC）的技术促进了松耦合。当应用了IoC，一个对象依赖的其它对象会通过被动的方式传递进来，而不是这个对象自己创建或者查找依赖对象。你可以认为IoC与JNDI相反——不是对象从容器中查找依赖，而是容器在对象初始化时不等对象请求就主动将依赖传递给它。
+​	面向切面，Spring提供了面向切面编程的丰富支持，允许通过分离应用的业务逻辑与系统级服务（例如审计（auditing）和事务（transaction）管理）进行内聚性的开发。应用对象只实现它们应该做的——完成业务逻辑——仅此而已。它们并不负责（甚至是意识）其它的系统级关注点，例如日志或事务支持。
+​	容器，Spring包含并管理应用对象的配置和生命周期，在这个意义上它是一种容器，你可以配置你的每个bean如何被创建——基于一个可配置原型（prototype），你的bean可以创建一个单独的实例或者每次需要时都生成一个新的实例——以及它们是如何相互关联的。然而，Spring不应该被混同于传统的重量级的EJB容器，它们经常是庞大与笨重的，难以使用。
+​	框架，Spring可以将简单的组件配置、组合成为复杂的应用。在Spring中，应用对象被声明式地组合，典型地是在一个XML文件里。Spring也提供了很多基础功能（事务管理、持久化框架集成等等），将应用逻辑的开发留给了你。
+​	所有Spring的这些特征使你能够编写更干净、更可管理、并且更易于测试的代码。它们也为Spring中的各种模块提供了基础支持。
+​	一般说的spring框架大都是Spring Framework，它是很多模块的集合，使用这些模块可以很方便地协助我们进行开发。这些模块包括核心容器、数据访问/集成、Web、AOP面向切面编程、工具、消息和测试模块。
 
-<img src=" /../assets/Spring/1240-20210629151319567.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319567.png" alt="img" style="zoom:50%;" />
 
-- 列举一些重要的spring模块：**
+- 列举一些重要的spring模块：
   （1）Spring Core 包含IOC容器等。
   （2）Spring Aspects 与AspectJ集成。
   （3）Spring AOP 面向切面的编程实现。
@@ -265,7 +265,7 @@ dom4j解析Demo
 
 ### BeanFactory
 
-<img src=" /../assets/Spring/1240-20210629152656549.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629152656549.png" alt="img" style="zoom:50%;" />
 
 #### BeanFactory和FactoryBean区别
 
@@ -325,7 +325,7 @@ dom4j解析Demo
 
 ### ApplicationContext
 
-<img src="../assets/Spring/1240-20210629151319716.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319716.png" alt="img" style="zoom:50%;" />
 
   是一个高级形态意义的IOC容器。
 
@@ -341,15 +341,15 @@ dom4j解析Demo
 
 ## IOC源码分析
 
-<img src=" /../assets/Spring/1240-20210629151319869.jpeg" alt="img" style="zoom: 33%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319869.jpeg" alt="img" style="zoom: 63%;" />
 
-<img src=" /../assets/Spring/1240-20210629151320045.jpeg" alt="img" style="zoom: 33%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320045.jpeg" alt="img" style="zoom: 63%;" />
 
-<img src=" /../assets/Spring/1240-20210629151319668.jpeg" alt="img" style="zoom:33%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319668.jpeg" alt="img" style="zoom:63%;" />
 
 *IOC初始化过程*:
 
-![img]( /../assets/Spring/1240-20210629151319746.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319746.png)
 
 
 
@@ -488,7 +488,7 @@ dom4j解析Demo
 
 （3）代理角色：代表真实角色的角色。根据上面代理的定义，我们可以知道代理角色需要至少完成（或实现）真实角色的功能。为了完成这一使命，那么代理角色也需要实现抽象角色所定义的行为（即代理类需要实现抽象角色所定义的接口），并且在实现接口方法的时候需要调用真实角色的相应方法。
 
-<img src=" /../assets/Spring/1240-20210629151319787.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319787.png" alt="img"/>
 
 - 特点：需要手动生成代理类，并在实现接口方法的时候调用真实类的方法。
 
@@ -508,7 +508,7 @@ dom4j解析Demo
 
 - DK动态代理的实现是在运行时，根据一组接口定义，使用Proxy、InvocationHandler等工具类去生成一个代理类和代理类实例。这两个类都在jdk的反射包java.lang.reflect下面。Proxy是个工具类，有了它就可以为接口生成动态代理类了。
 
-![img]( /../assets/Spring/1240-20210629151319938.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319938.png)
 
 - 生成的代理类$Proxy0对外只提供一个构造函数，这个构造函数接受一个InvocationHandler实例h，这个构造函数的逻辑非常简单，就是调用父类的构造函数，将参数h赋值给对象字段h。最终就是把所有的方法实现都分派到InvocationHandler实例h的invoke方法上。所以JDK动态代理的接口方法实现逻辑是完全由InvocationHandler实例的invoke方法决定的。
 
@@ -620,7 +620,7 @@ dom4j解析Demo
 - 基于CGLIB的优势：
     **无需实现接口**，达到代理类无侵入，只操作关心的类，而不必为其他相关类增加工作量。高性能。
 
-<img src="https://upload-images.jianshu.io/upload_images/24777208-76ed33817373b48c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/24777208-76ed33817373b48c.png" alt="img"/>
 
 # Spring AOP
 
@@ -662,15 +662,15 @@ dom4j解析Demo
 
 （1）定义目标接口和其实现类
 
-<img src=" /../assets/Spring/1240-20210629151319894.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319894.png" alt="img" style="zoom:50%;" />
 
 （2）定义Advice
 
-<img src=" /../assets/Spring/1240-20210629151319886.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319886.png" alt="img" style="zoom:50%;" />
 
 （3）在spring配置文件中定义**ProxyFactoryBean**
 
-<img src=" /../assets/Spring/1240-20210629151319949.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319949.png" alt="img" style="zoom:50%;" />
 
 #### **拦截器配置**
 
@@ -682,12 +682,12 @@ dom4j解析Demo
 （2）Advisor
   **它内部需要指定一个 Advice**，Advisor 决定该拦截哪些方法，拦截后需要完成的工作还是内部的 Advice 来做。
 
-<img src=" /../assets/Spring/1240-20210629151320072.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320072.png" alt="img" style="zoom:50%;" />
 
 （3）Interceptor
   类似JDK动态代理中的处理类的invoke方法。
 
-<img src=" /../assets/Spring/1240-20210629151319956.png" alt="img" style="zoom:80%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151319956.png" alt="img" style="zoom:80%;" />
 
 #### autoproxy自动代理
 
@@ -695,9 +695,9 @@ dom4j解析Demo
 
 用autoproxy包中的**BeanNameAutoProxyCreator代替ProxyFactoryBean。**
 
-<img src=" /../assets/Spring/1240-20210629151320023.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320023.png" alt="img" style="zoom:50%;" />
 
-<img src=" /../assets/Spring/1240-20210629151320007.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320007.png" alt="img" style="zoom:50%;" />
 
 ### 基于注解
 
@@ -730,7 +730,7 @@ dom4j解析Demo
 - @Pointcut("bean(*Service)") 匹配 bean 的名字（Spring AOP 独有）
     **注意点：**上面匹配中，通常 "." 代表一个包名，".." 代表包及其子包，方法参数任意匹配使用两个点 ".."
 
-```
+```java
   @Aspect
   public class SystemArchitecture{
     // web 层
@@ -818,21 +818,21 @@ dom4j解析Demo
 
 ### schema-based 配置
 
-  是 Spring 2.0 以后提供的基于 <aop /> 命名空间的 XML 配置。这里说的 schema-based 就是指基于 aop 这个 schema。
+  是 Spring 2.0 以后提供的基于` <aop />` 命名空间的 XML 配置。这里说的 schema-based 就是指基于 aop 这个 schema。
 
 ## AOP源码分析
 
-<img src=" /../assets/Spring/1240-20210629151320079.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320079.png" alt="img" style="zoom:50%;" />
 
-<img src=" /../assets/Spring/1240-20210629151320066.jpeg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320066.jpeg" alt="img" style="zoom:50%;" />
 
-<img src=" /../assets/Spring/1240-20210629151320171.jpeg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320171.jpeg" alt="img" style="zoom:50%;" />
 
 # Spring MVC
 
 ## MVC模型
 
-<img src=" /../assets/Spring/1240-20210629151320143.jpeg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320143.jpeg" alt="img" style="zoom:50%;" />
 
 ## web环境中的IOC环境
 
@@ -841,7 +841,7 @@ dom4j解析Demo
 
 ## 工作流程图
 
-<img src=" /../assets/Spring/1240-20210629151320184.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629151320184.png" alt="img"/>
 
 （1）用户向服务器发送请求，请求被Spring 前端控制Servelt DispatcherServlet捕获；
 
@@ -977,14 +977,14 @@ Action常见返回值种类：
 - 事务管理器类：
        Jdbc技术：**DataSourceTransactionManager**       
 
-   ​	Hibernate技术：**Hibernate****TransactionManager
+   ​	Hibernate技术：**HibernateTransactionManager**
    
    - **配置方式：**
        XML
         @Transactional注解
    
    - 注意点
-           事物是程序运行如果没有错误,会自动提交事物,如果程序运行发生异常,则会自动回滚。 ***如果使用了try捕获异常时.一定要在catch里面手动回滚。
+           事物是程序运行如果没有错误,会自动提交事物,如果程序运行发生异常,则会自动回滚。 **如果使用了try捕获异常时.一定要在catch里面手动回滚。**
 
 ## **事务传播行为**
 
