--- a/_posts/2020-11-02-计算机网络.md
+++ b/_posts/2020-11-02-计算机网络.md
@@ -620,7 +620,7 @@ tags: 网络与Web基础
 
 ## 三次握手-建立连接
 
-<img src="/../assets/Web/1240-20210701120907013.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210701120907013.png" alt="img"/>
 
 （1）TCP服务器进程先创建传输控制块TCB，时刻准备接受客户进程的连接请求，此时服务器就进入了LISTEN（监听）状态；
 
@@ -645,7 +645,7 @@ tags: 网络与Web基础
 
 ## 四次挥手-释放连接
 
-<img src="/../assets/Web/1240-20210701120907021.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210701120907021.png" alt="img" />
 
 （1）客户端进程发出连接释放报文，并且停止发送数据。释放数据报文首部，FIN=1，其序列号为seq=u（等于前面已经传送过来的数据的最后一个字节的序号加1），此时，客户端进入FIN-WAIT-1（终止等待1）状态。 TCP规定，FIN报文段即使不携带数据，也要消耗一个序号。
 
@@ -674,7 +674,7 @@ tags: 网络与Web基础
 
 ​    浏览器缓存IP --> 系统缓存hosts文件 --> Local DNS Server（本地DNS服务器） --> Root DNS Server --> 跟域名服务器把gTLD主域名服务器地址（.com）发送给LDNS --> LDNS --> gTLD Server --> gTLD服务器把Name Server地址（.baidu）发送给LDNS --> LDNS --> Name Server --> 把IP地址发送给LDNS --> LDNS --> 客户端（缓存结果）
 
-<img src="/../assets/Web/1240-20210701120907043.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210701120907043.png" alt="img"/>
 
 （2）浏览器发送HTTP请求，需要先建立TCP连接。
 
