--- a/_posts/2020-10-14-JavaWeb.md
+++ b/_posts/2020-10-14-JavaWeb.md
@@ -88,7 +88,7 @@ tags: 网络与Web基础
 
   servlet容器的产生是为了技术上的解耦，通过标准化接口来相互协作。  
 
-<img src="/../assets/JavaWeb/1240-20210629161853270.jpeg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853270.jpeg" alt="img" style="zoom:50%;" />
 
   图中看出，真正管理servlet的容器是Context容器，且一个Context对应一个Web工程。
 
@@ -321,9 +321,7 @@ Tomcat启动代码
 
 ### 时序图
 
-<img src="/../assets/JavaWeb/1240-20210629161853294.png" alt="img" style="zoom:50%;" />
-
-图3-2 Servlet生命周期时序图
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853294.png" alt="img" style="zoom:70%;" />
 
 ## Servlet多线程问题
 
@@ -679,7 +677,7 @@ session.removeAttribute("sesionToken");
 
 （1）XSS 跨站脚本注入
 
-​    利用Filter进行拦截，例如将<script>转化为html元素 &lt;script&gt;。
+​    利用Filter进行拦截，例如将`<script>`转化为html元素 `&lt;script&gt;`。
 
 （2）CSRF 跨站请求伪造，避免Cookie，利用token。
 
@@ -857,7 +855,7 @@ GET /day09/hello HTTP/1.1
 
 ### 工作原理
 
-![img](/../assets/JavaWeb/1240-20210629161853239.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853239.png)
 
 　客户端在使用HTTPS方式与 Web 服务器通信时有以下几个步骤。
 
@@ -887,7 +885,7 @@ GET /day09/hello HTTP/1.1
 
   高级加密标准(AES,Advanced Encryption Standard)为最常见的**对称加密算法**(微信小程序加密传输就是用这个加密算法的)。**对称加密算法也就是加密和解密用相同的密钥**，具体的加密流程如下图：
 
-<img src="/../assets/JavaWeb/1240-20210629161853318.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853318.png" alt="img" />
 
 #### RSA
 
@@ -895,9 +893,7 @@ GET /day09/hello HTTP/1.1
 
   非对称加密是通过两个密钥（公钥-私钥）来实现对数据的加密和解密的。公钥用于加密，私钥用于解密。
 
-<img src="/../assets/JavaWeb/1240-20210629161853335-4954733.png" alt="img" style="zoom:50%;" />
-
-<img src="/../assets/JavaWeb/1240-20210629161853335.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853335-4954733.png" alt="img"/>
 
 #### CRC
 
@@ -1122,7 +1118,7 @@ GET /day09/hello HTTP/1.1
 
 ## 架构
 
-<img src="/../assets/JavaWeb/1240-20210629161853360.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853360.png" alt="img" style="zoom:50%;" />
 
 （1）架构说明
 
@@ -1156,13 +1152,13 @@ GET /day09/hello HTTP/1.1
 
 ## 用户登录
 
-<img src="/../assets/JavaWeb/1240-20210629161853432.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853432.png" alt="img" />
 
 按照上图，用户登录后Authtoken保存在Cookie中。 domian= test. com浏览器会将domain设置成 .test.com，这样访问所有*.test.com的web站点，都会将Authtoken携带到服务器端。然后通过SSO服务，完成对用户状态的校验/用户登录信息的获取。
 
 ## 登录信息获取/登录状态校验:
 
-<img src="/../assets/JavaWeb/1240-20210629161853460.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853460.png" alt="img"/>
 
 ## 用户登出时序图
 
@@ -1172,7 +1168,7 @@ GET /day09/hello HTTP/1.1
 
 · 客户端清除存储的AuthToken
 
-<img src="/../assets/JavaWeb/1240-20210629161853416.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853416.png" alt="img"/>
 
 ## 跨域登录/登出
 
@@ -1184,19 +1180,17 @@ GET /day09/hello HTTP/1.1
 
 · 登出完成之后通过回调的方式，调用非主域名站点的登出页面，完成设置Cookie中的AuthToken过期的操作。
 
-·跨域登录（主域名已登录）
+- 跨域登录（主域名已登录）
 
-<img src="/../assets/JavaWeb/1240-20210629161853461.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853461.png" alt="img" />
 
-图 5-5 跨域登录（主域名已登录） 
+- 跨域登录（主域名未登录）
 
-·跨域登录（主域名未登录）
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853481.png" alt="img"/>
 
-<img src="/../assets/JavaWeb/1240-20210629161853481.png" alt="img" style="zoom:50%;" />
+- 跨域登出
 
-·跨域登出
-
-<img src="/../assets/JavaWeb/1240-20210629161853448.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210629161853448.png" alt="img"/>
 
 ## 实现
 
@@ -1233,7 +1227,7 @@ GET /day09/hello HTTP/1.1
   8. 服务商根据令牌和用户的授权情况授予第三方网站访问令牌。
   9. 第三方网站使用获取到的访问令牌访问存放在服务商的对应的用户资源。
 
-  ![img](/../assets/JavaWeb/Center.jpeg)
+  ![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/Center.jpeg)
 
 ## 模式
 
