--- a/_posts/2022-02-16-git团队开发流程.md
+++ b/_posts/2022-02-16-git团队开发流程.md
@@ -34,23 +34,36 @@ git pull
    git push origin branchname 将代码更新到远端分支
    ```
 
-3. 代码合并到主分支main
+3. 冲突合并和解决冲突
 
    ```shell
    git checkout branchname 确保在本次的分支上
    git pull -r origin main 更新主分支代码，并进行冲突合并
+   ```
+
+   如果遇到冲突（CONFLICT），按照提示进行冲突解决，解决后：
+
+   ```shell
+   git add . 保存修改
+   git rebase --continue 继续进行冲突合并，如果还有冲突，继续解决冲突
+   git push origin branchname 更新分支代码
+   ```
+
+4. 合并分支
+
+   ```shell
    git checkout main 切换到主分支
    git merge branchname 合并分支到主分支
    ```
 
-4. 删除本次开发的分支
+5. 删除本次开发的分支
 
    ```shell
    git branch -d branchname 删除本地分支
    git push origin -d branchname 删除远端分支
    ```
 
-5. 主分支main代码更新到远端git仓库
+6. 主分支main代码更新到远端git仓库
 
    ```shell
    git push origin main 更新本地main分支代码到远端
